# prompt-sentinel

./: .dockerignore  .env  .env.example  .gitignore  ADD_SKILLS.md  CONFIGURATION_GUIDE.md  Cargo.toml  DEMO_VIDEO_SCRIPT.md  DEVELOPMENT_PLAN.md  DOCUMENTATION.md  Dockerfile  EU_COMPLIANCE_ANALYSIS.md  LEGAL_AUDIT.md  LICENSE  NEXT-PHASE.md  PROGRESS_SUMMARY.md  README.md  USAGE_EXAMPLES.md  demo-plan.md  docker-compose.yml
.vibe/: config.toml
.vibe/prompts/: bias_detection.md  eu_compliance.md  mistral_expert.md  prompt_firewall.md
.vibe/skills/bias_detection/: SKILL.md
.vibe/skills/eu_law_compliance/: SKILL.md
.vibe/skills/mistral_expert/: SKILL.md
.vibe/skills/prompt_firewall/: SKILL.md
apps/demo-web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json
apps/demo-web/e2e/: demo.spec.ts
apps/demo-web/src/: App.tsx
apps/demo-web/src/components/: AuditProofCard.test.tsx  AuditProofCard.tsx  ComplianceSummary.tsx  HealthPanel.tsx  PromptComposer.tsx  RawJsonPanel.test.tsx  RawJsonPanel.tsx  RequestHistory.tsx  ScenarioChips.tsx  WorkflowStages.tsx
apps/demo-web/src/domain/: contracts.test.ts  contracts.ts  types.ts
apps/demo-web/src/layout/: AppShell.tsx  DesktopSidePanel.tsx  (+1 more)
config/: eu_risk_keywords.json  firewall_rules.json  semantic_attack_bank.json
demo-ui/: .gitignore  Dockerfile  package-lock.json  package.json
demo-ui/src/: App.css  App.tsx  api.ts  types.ts
demo-ui/src/components/: AuditCard.tsx  AuditLogsPage.tsx  BiasCard.tsx  Dashboard.tsx  DecisionEvidenceCard.tsx  EuComplianceCard.css  EuComplianceCard.tsx  ExampleButtons.tsx  FirewallCard.tsx  Header.tsx  Pipeline.tsx  PromptInput.tsx  ResponseCard.tsx  SemanticCard.tsx  StatusCard.tsx  TransparencyBanner.css  TransparencyBanner.tsx
prompt_sentinel_data/: db
src/: lib.rs  main.rs  server.rs
src/config/: mod.rs  settings.rs  vibe_config.rs
src/modules/: mod.rs
src/modules/audit/: logger.rs  mod.rs  proof.rs  storage.rs
src/modules/bias_detection/: dtos.rs  handler.rs  mod.rs  model.rs  service.rs
src/modules/eu_law_compliance/: dtos.rs  handler.rs  model.rs  service.rs
src/modules/mistral_ai/: client.rs  dtos.rs  mod.rs  service.rs
src/modules/mistral_expert/: client.rs  handler.rs  service.rs
src/modules/prompt_firewall/: dtos.rs  handler.rs  mod.rs  rules.rs  service.rs
src/modules/semantic_detection/: dtos.rs  mod.rs  service.rs
src/modules/telemetry/: correlation.rs  metrics.rs  mod.rs  tracing.rs
src/workflow/: mod.rs
test_english_data/: db  snap.0000000000000480
test_multilingual_data/: db  snap.0000000000000484
tests/: compliance_flow.rs  demo.rs  eu_compliance_rules.rs  firewall_benchmark.rs  multilingual_firewall_test.rs  multilingual_response_test.rs  multilingual_test.rs  new_endpoints.rs  observability_tests.rs  property_tests.proptest-regressions  property_tests.rs  security_regressions.rs  semantic_eval.rs
tests/eval/: injection_eval.jsonl
(+10 files in other folders)
