[package]
name = "prompt_sentinel"
version = "0.1.0"
edition = "2024"
authors = ["Inferenco"]
description = "A reusable AI compliance framework using axum and sled"
license = "MIT"
repository = "https://github.com/Inferenco/prompt_sentinel"
keywords = ["ai", "compliance", "framework", "axum", "sled"]
categories = ["web-programming", "api-bindings", "artificial-intelligence"]

[[bin]]
name = "prompt_sentinel_server"
path = "src/main.rs"

[lib]
name = "prompt_sentinel"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15.7"
hex = "0.4"
lazy_static = "1.5"
metrics = "0.22"
metrics-exporter-prometheus = "0.18"
once_cell = "1.21"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sled = "0.34"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
proptest = "1.4"
